# docs/swagger.yaml
@@ -172,6 +172,8 @@ definitions:
     type: object
   dto.LoginResponse:
     properties:
+      employee:
+        $ref: '#/definitions/dto.EmployeeResponse'
       token:
         type: string
     type: object
@@ -389,6 +391,23 @@ paths:
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
       summary: 로그인
+      tags:
+      - auth
+  /api/auth/me:
+    get:
+      description: JWT 토큰을 이용해 로그인한 직원의 정보를 반환합니다.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.EmployeeResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: 내 정보 조회
       tags:
       - auth
   /api/delivery-log:
